assets/css/style.css
* {
    position: relative;
    box-sizing: border-box;
}

body {
    margin: 0px;
}

a:link {
    text-decoration: none;
    font-family: Arial, Helvetica, sans-serif;
    color: #777777;
}

a:visited {
    text-decoration: none;
    font-family: Arial, Helvetica, sans-serif;
    color: #777777;
}

a:hover {
    text-decoration: underline;
    font-family: Arial, Helvetica, sans-serif;
    color: #777777;
}

a:active {
    text-decoration: underline;
    font-family: Arial, Helvetica, sans-serif;
    color: #777777;
}

header {
    overflow: auto;
    background-color: #ffffff;
    border-bottom: 3px solid;
    border-color: #cccccc;
    height: 80px;
}

.headcontainer {
    width: 960px;
    margin: auto;
}

.nav {
    padding: 25px 0px 20px 0px;
    margin: auto;
    float: right;
    font-family: Arial, Helvetica, sans-serif;
    color: #777777;
    opacity: .8;
}

h1 {
    padding: 20px;
    margin: auto;
    float: left;
    background-color: #4aaaa5;
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: white;
}

#index {
    padding: 0px 10px 0px 0px;
    font-size: 18px;
}

#portfolio {
    padding: 0px 10px 0px 10px;
    border-left: 1px solid;
    border-right: 1px solid;
    border-color: #cccccc;
    font-size: 18px;
}

#contact {
    padding: 0px 0px 0px 10px;
    font-size: 18px;
}

main {
    overflow: auto;
    width: 100%;
    padding: 20px 0px 80px 0px;
    background-image: url(../images/background.jpg);
}

h2 {
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: #4aaaa5;
    font-size: 28px;
    padding-left: 30px;
}

hr {
    margin: 0 20px;
    height: 2px;
    border: 0 none;
    background-color: black;
    opacity: .2;
    margin-bottom: 10px;
}

.bodywrap {
    width: 960px;
    margin: auto;
    padding-top: 20px;
    padding-bottom: 10%;
    overflow: auto;
}

.bodycontainer {
    background-color: #ffffff;
    height: 20%;
    margin: auto;
    font-family: Arial, Helvetica, sans-serif;
    padding: 10px 20px 0px 20px;
}

#me {
    border-radius: 25px;
    width: 150px;
    height: 225px;
    float: left;
    padding: 10px 15px 15px 8px;
}

.portfolio {
    margin: auto;
    padding: 20px;
    overflow: auto;
}

.pimage {
    width: 250px;
    height: 200px;
    overflow: auto;
    margin: auto;
}

#hangman, #rpg, #trivia, #widget, #rock {
    position: absolute;
    width: 250px;
    margin: auto;
    background-color: #4aaaa5;
    padding: 15px;
    z-index: 1;
    left: 0;
    bottom: 15px;
    text-align: center;
    color: #ffffff;
    font-family: Arial, Helvetica, sans-serif;
}

.hangmanset, .rpgset, .triviaset, .widgetset, .rockset {
    width: 250px;
    display: block;
    margin: 20px;
    float: left;
}

#messagebox {
    height: 200px;
}

.formy {
    font-family: Arial, Helvetica, sans-serif;
}

input {
    width: 100%;
    padding: 12px;
    border: .5px solid #ccc;
    margin: 6px 0px 15px 0px;
    resize: vertical;
}

#submit {
    width: 80px;
    position: relative;
    bottom: 0;
    left: 0;
    background-color: #4aaaa5;
    color: #ffffff;
    border: none;
    padding: 10px;
    margin-bottom: 10px;
}

form {
    padding: 20px;
    overflow: auto;
    margin: auto;
}

p {
    opacity: .8;
    line-height: 24px;
}

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    background-color: #666666;
    border-top: 8px solid;
    border-color: #4aaaa5;
    height: 30px;
    padding: 30px 10px 30px 10px;
    z-index: 10;
}

#copyright {
    color: white;
    text-align: center;
    margin: auto;
}

@media screen and (max-width: 980px) {
    * {
        width: auto;
    }

    main .bodywrap, .bodycontainer {
        width: auto;
        padding: 20px;
    }

    .nav {
        overflow: auto;
        float:  none;
    }

    header, .nav {
        height: auto;
        width: auto%;
        top: 0;
        margin: auto;
    }

    footer {
        width: 100%;
        bottom: 0;

    }

}

@media screen and (max-width: 768px) {
    * {
        width: auto;
    }

    main .bodywrap, .bodycontainer {
        width: auto;
        padding: 20px;
    }

    .nav {
       
    }

    header, .nav {
        height: auto;
        width: auto%;
        top: 0;
        margin: auto;
    }

    footer {
        width: 100%;
        bottom: 0;

    }

}

@media screen and (max-width: 640px) {
    * {
        width: auto;
    }

    main .bodywrap, .bodycontainer {
        width: auto;
        padding: 20px;
    }

    h1 {
        width: auto;
        text-align: center;
    }

    .nav {
        postion: fixed;
        margin: auto;
        heigth: 100%;
        width: auto;
        text-align: center;
    }

    header {
        height: auto;
        width: auto%;
        top: 0;
        margin: auto;
        text-align: auto;
    }

    footer {
        width: 100%;
        bottom: 0;
    }

}

